# hass-adam-audio-control

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  quality_scale.yaml  requirements.txt  test_backplate_card.html
.devcontainer/: devcontainer.json
.github/workflows/: publish-lib.yml  release.yml  test.yml
custom_components/adam_audio/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  number.py  oca_command.py  oca_device.py  oca_keepalive.py  oca_message.py  oca_response.py  oca_types.py  oca_util.py  select.py  strings.json  switch.py
custom_components/adam_audio/pacontrol/: __init__.py  command.py  device.py  keepalive.py  message.py  response.py  types.py  util.py
custom_components/adam_audio/translations/: en.json  fr.json
custom_components/adam_audio/www/: adam-audio-backplate-card-alt.js  adam-audio-backplate-card.js  adam-audio-card.js  backplate-card.js
lib/: pyproject.toml
lib/pyadamaudiocontroller/: __init__.py  command.py  device.py  keepalive.py  message.py  response.py  types.py  util.py
lib/tests/: test_device.py  test_types.py
scripts/: browse_mdns  checks  deploy-card  develop  gen_core.py  lint  start_fresh  sync_version_badge  tests  validate_core
tests/: __init__.py  conftest.py  test_client.py  test_components.py  test_config_flow.py  test_init.py  test_oca_device.py  test_oca_types.py
www/: adam-audio-card.js
